core-plugins/src/test/resources/scraper/plugins/core/typechecker/fail/map.yf
---
name: map
graphs:
  start:
    - type: Echo
      put: key
      value: "1"

    - type: Map
      mapTarget: X
      list: [A,B]
      putElement: element

    - type: Echo
      log: "{element}" # not ok!

  X:
    - type: Echo
      put: key
      value: "{element}" # ok!


